调整文章格式

--- a/_posts/2023-01-17-量化交易框架介绍.md
+++ b/_posts/2023-01-17-量化交易框架介绍.md
@@ -14,7 +14,7 @@ author_staff_member: dumengru
 
 使用过很多量化交易框架, 在这里给大家介绍几个非常有特色而且完全免费开源的量化交易框架, 涉及到期货, 股票, 外汇和数字货币等各个金融市场. 
 
-#### VeighNa
+## VeighNa
 
 对于刚进入量化交易领域的同学来说, VeighNa确实是一个非常值得推荐的量化交易框架.
 
@@ -30,9 +30,9 @@ GitHub地址: https://github.com/vnpy/vnpy
 
 交易接口: 
 
-![](../../images/202301162143.png)
+![](../images/202301162143.png)
 
-#### WonderTrader
+## WonderTrader
 
 虽然Vnpy优点多多, 但是如果编程水平较高, 仍然更推荐使用WonderTrader(毕竟C++对Python天然存在血脉压制).
 
@@ -55,9 +55,9 @@ GitHub地址(WtPy): https://github.com/wondertrader/wtpy
 参考文档: https://dumengru.com/docs_wondertrader/
 
 交易接口:
-![](../../images/202301162152.png)
+![](../images/202301162152.png)
 
-#### MT5
+## MT5
 
 虽然MT4在国内名声不大好, 但这真不能全怪MetaQuotes公司, 只能怪那些滥用MT平台的外汇经纪商.
 
@@ -79,7 +79,7 @@ GitHub地址(WtPy): https://github.com/wondertrader/wtpy
 
 交易品种: 外汇, 外盘期货, 股票和期权等, 根据选择的经纪商而定.
 
-#### CCXT
+## CCXT
 
 从中本聪提出"比特币"的概念到现在, 短短十几年的时间里, 涌现出无数的加密货币, 同时也诞生了数不清的数字货币交易所. 
 
@@ -95,7 +95,7 @@ GitHub地址: https://github.com/ccxt/ccxt
 
 交易品种: 数字货币
 
-#### FreqTrade
+## FreqTrade
 
 CCXT统一了各个交易所的API接口, FreqTrade则是在CCXT的基础上编写了一套完整的量化交易系统.
 
