--- a/_posts/2023-01-20-量化交易框架_MT5.md
+++ b/_posts/2023-01-20-量化交易框架_MT5.md
@@ -7,8 +7,9 @@ categories:
 author_staff_member: dumengru
 ---
 
-#### 简介
 很多使用过MetaTrade软件的人都会认为它是外汇交易领域最专业的软件, 没有之一.
+
+## 简介
 
 MT5是MetaQuotes公司开发的一款量化交易软件, 全称**MetaTrader5**, 它的前一个版本MT4, 纵横外汇交易市场数年, 一直独领风骚, 直至今日, MetaQuotes公司推出MT5已经十余年, 仍有不少人使用MT4.
 
@@ -23,36 +24,42 @@ MT5是MetaQuotes公司开发的一款量化交易软件, 全称**MetaTrader5**, 
 文档: https://www.mql5.com/zh/docs
 
 
-#### 优势
+## 优势
+
 **语言**
+
 MT5使用mql5语言, 语法与C++十分相似, 如果你会C++, 几乎可以毫不费力上手, 而且其速度和性能也和C++不相伯仲. 
 
 C++能做到的, mql5几乎都能做到, 想想可怕吧.
 
 **文档**
-![](../../images/202301202245.png)
+
+![](../images/202301202245.png)
 1. 可以查阅网页版文档, 在MetaEditor5编辑代码时也能直接查阅文档.
 2. 文档包括多国语言(含中文), 结构清晰, 示例多, 可以说是编程文档的典范.
 
 **回测**
-![](../../images/202301202247.png)
+
+![](../images/202301202247.png)
 MT5可以设置不同的回测模式, 不同保证金币种和杠杆
 
-![](../../images/202301202254.png)
+![](../images/202301202254.png)
 回测时可以对品种设置极精细的保证金, 点差, 费用和持仓等, 这是笔者遇到过最专业的回测平台. 
 
 MT5支持自定义品种, 这就意味着只要有数据, 任何品种都可以使用MT5平台做回测.
 
 **社区**
-![](../../images/202301202301.png)
+
+![](../images/202301202301.png)
 MT5社区是笔者遇到过最专业的量化交易社区, 几乎每篇文章质量都很高, 因为每篇文章都有价值200美金的奖励.如果你有兴趣和能力, 也可以尝试在MT5社区发表文章.
 
 **数据**
+
 数据是做量化交易的基础, 没有数据就无法做回测, 进而就不能判断策略的好坏. 而国内的股票, 期货和期权等所有金融品种的交易数据都要收费...
 
 使用MT5平台, 你只需要寻找一个合适的外汇经纪商(很多外汇经纪商都不靠谱), 就可以免费下载和使用Tick级的交易数据.
 
-#### 劣势
+## 劣势
 
 1. 因为有很多骗人的外汇交易平台都使用MT5软件, 因此MT5名声不大好.
 2. MT5的客户端界面真的太丑.
