--- a/_posts/2023-02-05-技术指标工具_TA-Lib.md
+++ b/_posts/2023-02-05-技术指标工具_TA-Lib.md
@@ -12,13 +12,14 @@ categories:
 author_staff_member: dumengru
 ---
 
-![](../../images/202302041717.png)
-
 一般的量化交易策略, 必不可少需要用到技术指标. 除了少部分个性化需求, 量化交易领域计算一般性指标都会使用到TA-Lib这个工具. 
 
 安装Veighna和FreqTrade这两个项目之前也必须先成功安装TA-Lib.
 
+![](../images/202302041717.png)
+
 ## 简介
+
 TA-Lib广泛应用与交易软件和金融市场数据进行技术分析.
 
 它包含200多种技术指标和各种蜡烛图形态识别, 支持C++和Python在内的多种编程语言.
@@ -26,6 +27,7 @@ TA-Lib广泛应用与交易软件和金融市场数据进行技术分析.
 TA-Lib官网: https://ta-lib.org/
 
 ## Python安装
+
 直接使用`pip install TA-Lib`是会报错的, 
 
 1. 下载对应版本的ta-lib安装包: https://www.lfd.uci.edu/~gohlke/pythonlibs/#ta-lib
@@ -35,9 +37,11 @@ TA-Lib官网: https://ta-lib.org/
 > 也可在任意目录打开cmd, 然后输入`pip install `, 再把文件直接拖到cmd窗口, 回车即可
 
 ## C++安装
+
 作为WonderTrader项目的分支, C++安装并使用TA-Lib部分参考: https://dumengru.com/docs_wonder/01%E5%AE%89%E8%A3%85/03%E5%AE%89%E8%A3%85TA-Lib/
 
 ## 使用 
+
 这里有TA-Lib详细的中文翻译及使用示例: https://github.com/HuaRongSAO/talib-document
 
 ## 注意事项
