--- a/_posts/2023-02-06-策略回测示例_VeighNa.md
+++ b/_posts/2023-02-06-策略回测示例_VeighNa.md
@@ -6,7 +6,11 @@ categories:
   - vnpy
 author_staff_member: dumengru
 ---
+
+本文主要介绍使用VeighNa进行策略回测.
+
 ## 准备数据
+
 为方便演示, 这里使用了可直接免费下载的5分钟数据.
 
 使用"efinance"下载数据及脚本导入数据代码如下:
@@ -85,7 +89,7 @@ if __name__ == '__main__':
 ```
 如果数据正常保存, 可以在VeighNa界面查看到记录.（使用脚本启动VeighNa请参考: https://dumengru.com/docs_vnpy/02%E4%BB%A3%E7%A0%81%E5%AE%89%E8%A3%85/03%E5%AE%89%E8%A3%85%E6%B5%8B%E8%AF%95/）
 
-![](../../images/202302062201.png)
+![](../images/202302062201.png)
 
 ## 策略回测
 VeighNa有自带的一些交易策略, 这里我们直接使用官方提供的策略执行回测.
@@ -128,10 +132,10 @@ engine.calculate_statistics()
 engine.show_chart()
 ```
 如果正常执行回测, 会看到以下回测结果:
-![](../../images/202302062230.png)
+![](../images/202302062230.png)
 
 同时会打开浏览器绘制盈亏图:
-![](../../images/202302062302.png)
+![](../images/202302062302.png)
 
 ## Tick回测
 如果你有tick数据, 也可以尝试使用tick数据做回测. 
@@ -139,7 +143,7 @@ engine.show_chart()
 **准备Tick数据**
 
 tick数据需要自己准备, 这里我的数据格式如下:
-![](../../images/202302062233.png)
+![](../images/202302062233.png)
 
 导入数据代码
 ```python
@@ -228,7 +232,7 @@ print(result)
 
 1. 注意需要将原策略`on_init`中的代码略作修改, 表示初始化时加载tick数据而非Bar数据.
 
-![](../../images/202302062239.png)
+![](../images/202302062239.png)
 
 2. 回测代码如下:
 
