修改图片路径

--- a/_posts/2023-01-17-量化交易框架介绍.md
+++ b/_posts/2023-01-17-量化交易框架介绍.md
@@ -30,7 +30,7 @@ GitHub地址: https://github.com/vnpy/vnpy
 
 交易接口: 
 
-![](../images/202301162143.png)
+![]({{site.baseurl}}/images/202301162143.png)
 
 ## WonderTrader
 
@@ -55,7 +55,7 @@ GitHub地址(WtPy): https://github.com/wondertrader/wtpy
 参考文档: https://dumengru.com/docs_wondertrader/
 
 交易接口:
-![](../images/202301162152.png)
+![]({{site.baseurl}}/images/202301162152.png)
 
 ## MT5
 
