--- a/_posts/2023-01-18-量化交易框架_VeighNa.md
+++ b/_posts/2023-01-18-量化交易框架_VeighNa.md
@@ -33,7 +33,7 @@ VeighNa由上海韦纳软件科技有限公司运营, 项目运行时间长, 版
 
 同时VeighNa公司还有很多微信交流群, 每天有固定时间段可以帮助答疑解惑.
 
-![](../images/202301182204.png)
+![]({{site.baseurl}}/images/202301182204.png)
 
 缺点是社区更像技术论坛, 缺少一些有深度的文章.
 
@@ -44,7 +44,7 @@ VeighNa由上海韦纳软件科技有限公司运营, 项目运行时间长, 版
 **代码规范**
 
 VeighNa框架的源码编写很规范, 同时结构清晰, 并紧紧跟随Python版本的更新而更新. 经常阅读VeighNa框架源码, 不仅能了解VeighNa框架的运行逻辑, 同时能提高Python的编写水平.
-![](../images/202301182232.png)
+![]({{site.baseurl}}/images/202301182232.png)
 
 **功能丰富**
 
