--- a/_posts/2023-01-20-量化交易框架_MT5.md
+++ b/_posts/2023-01-20-量化交易框架_MT5.md
@@ -34,23 +34,23 @@ C++能做到的, mql5几乎都能做到, 想想可怕吧.
 
 **文档**
 
-![](../images/202301202245.png)
+![]({{site.baseurl}}/images/202301202245.png)
 1. 可以查阅网页版文档, 在MetaEditor5编辑代码时也能直接查阅文档.
 2. 文档包括多国语言(含中文), 结构清晰, 示例多, 可以说是编程文档的典范.
 
 **回测**
 
-![](../images/202301202247.png)
+![]({{site.baseurl}}/images/202301202247.png)
 MT5可以设置不同的回测模式, 不同保证金币种和杠杆
 
-![](../images/202301202254.png)
+![]({{site.baseurl}}/images/202301202254.png)
 回测时可以对品种设置极精细的保证金, 点差, 费用和持仓等, 这是笔者遇到过最专业的回测平台. 
 
 MT5支持自定义品种, 这就意味着只要有数据, 任何品种都可以使用MT5平台做回测.
 
 **社区**
 
-![](../images/202301202301.png)
+![]({{site.baseurl}}/images/202301202301.png)
 MT5社区是笔者遇到过最专业的量化交易社区, 几乎每篇文章质量都很高, 因为每篇文章都有价值200美金的奖励.如果你有兴趣和能力, 也可以尝试在MT5社区发表文章.
 
 **数据**
