--- a/_posts/2023-02-01-量化交易框架_CCXT.md
+++ b/_posts/2023-02-01-量化交易框架_CCXT.md
@@ -13,7 +13,7 @@ author_staff_member: dumengru
 
 币圈的交易所真是太多了, 各家交易所又没有统一的交易API, 每个交易员也不大可能只在一家交易所做交易(参考: MTGOX和FTX交易所破产), 于是CCXT项目出现了, 它统一了数十家交易所的接口. 
 
-![](../images/202302012317.png)
+![]({{site.baseurl}}/images/202302012317.png)
 
 Github地址: https://github.com/ccxt/ccxt
 
