--- a/_posts/2023-02-04-交易数据下载与保存.md
+++ b/_posts/2023-02-04-交易数据下载与保存.md
@@ -46,19 +46,19 @@ WonderTrader处理历史数据较为复杂, 参考: https://dumengru.com/docs_wo
 #### MT5
 登录自己的经纪商账户, 自动有Tick级数据, 将来做策略回测和研究简直不要太方便.
 
-![](../images/202302041511.png)
+![]({{site.baseurl}}/images/202302041511.png)
 
 值得注意的是, 外汇由于其特殊性, 不同经纪商提供的历史数据都不一样, 为了保证将来实盘一致性, 建议始终使用我们将来计划实盘交易的账户的历史数据.(尤其不建议使用MT5自带的模拟账户提供的历史数据, 因为它的买卖点差太小, 和一般经纪商实盘提供的点差有差异)
 
 #### CCXT
 在加密货币领域, 能获取哪些历史数据和CCXT无关, 和我们开户的交易所有关.
 
-![](../images/202302041600.png)
+![]({{site.baseurl}}/images/202302041600.png)
 
 #### FreqTrade
 FreqTrade直接使用一句命令便可以下载数据
 
-![](../images/202302041605.png)
+![]({{site.baseurl}}/images/202302041605.png)
 
 ## 数据问题
 #### K线合成
