--- a/_posts/2023-02-05-技术指标工具_TA-Lib.md
+++ b/_posts/2023-02-05-技术指标工具_TA-Lib.md
@@ -16,7 +16,7 @@ author_staff_member: dumengru
 
 安装Veighna和FreqTrade这两个项目之前也必须先成功安装TA-Lib.
 
-![](../images/202302041717.png)
+![]({{site.baseurl}}/images/202302041717.png)
 
 ## 简介
 
